grafana/base/routes/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grafana
  namespace: grafana
spec:
  host: REPLACE_IN_OVERLAY
  to:
    kind: Service
    name: grafana-service
    weight: 100
  port:
    targetPort: grafana
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
